# abcd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  docker-compose.yml  longleaf_sweep.sh  pyproject.toml  requirements.txt  run.py  run_all.py  run_mlp.py  run_randomforest.py  run_svm.py
.virtual_documents/notebooks/: 00_dataprep.ipynb
configs/: data.yaml  harmonize.yaml  mlp.yaml  pca.yaml  randomforest.yaml  regression.yaml  run.yaml  svm.yaml  sweep.yaml  tsne.yaml
docs/: references
notebooks/: 00_dataprep.ipynb  01_harmonize.ipynb  02_tsne.ipynb  03_pca.ipynb  04_svm.ipynb  05_randomforest.ipynb  06_mlp.ipynb  07_regression.ipynb  08_synthetic_tests.ipynb  09_longitudinal.ipynb  11_robustness.ipynb  analyze_fold_variance.ipynb  analyze_fold_variance_rf.ipynb
notebooks/.ipynb_checkpoints/: 00_dataprep-checkpoint.ipynb
notebooks/anxiety/: 04_anysvm.ipynb  05_anyrandomforest.ipynb  05_randomforest.ipynb  05_randomforestsubvscontrol.ipynb
notebooks/comorbid/: 04_anysvm.ipynb  04_svm.ipynb  05_randomforestsubvsclin.ipynb
notebooks/psychosis/: 04_svmsubvsclin.ipynb  04_svmsubvscontrol.ipynb  05_anyrandomforest.ipynb  05_randomforest.ipynb
src/core/: config.py  downsampling.py  run_pipeline.py  tuning.py
src/core/harmonize/: artifacts.py  harmonize.py  prepare.py
src/core/mlp/: __init__.py  models.py  pipeline.py
src/core/pca/: embeddings.py  pipeline.py  plotting.py
src/core/preprocessing/: artifacts.py  ingest.py  missing.py  (+4 more)
src/synapse/: preprocess.py
tests/: conftest.py
tests/test_config/: test_config_validation.py
(+26 files in other folders)
