[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1.0"
description = "ABCD Anxiety Analysis: Reproducible Neuroimaging Pipeline"
requires-python = ">=3.9"
dependencies = [
    # Core data science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=19.0.0",

    # Neuroimaging
    "neuroHarmonize>=2.4.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.29.0",

    # Utilities
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",

    # Experiment tracking (optional but included)
    "wandb>=0.18.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 120
ignore = ["E501"]

[tool.black]
line-length = 120
